[package]
name = "nostr-relay"
version = "0.1.0"
keywords = ["nostr", "nostr-relay"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = "0.8"
tokio = { version = "1.50", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytestring = "1.5"
config = { version = "0.15", features = [
    "toml",
    "json",
], default-features = false }
duration-str = { version = "0.21", default-features = false }
hex = "0.4"
metrics = "0.24"
notify = "8"
num_cpus = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1.11"
uuid = { version = "1.21", features = ["v4", "serde"] }
dashmap = "5.5"
futures-util = "0.3"
async-trait = "0.1"
libc = "0.2.182"
lmdb-master-sys = "0.2.5"
chrono = "0.4.44"
siwe = "0.6.1"
alloy = "1.7.3"
sha2 = "0.10.9"
tokio-util = "0.7"
mime_guess = "2"
tracing-subscriber = "0.3"
futures = "0.3.32"
libp2p = { version = "0.56", features = [
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "macros"
] }
axum-extra = { version = "0.12.5", features = ["multipart"] }

[dev-dependencies]
anyhow = "1.0.86"
temp-env = "0.3.6"
tempfile = "3.12.0"
tracing-subscriber = "0.3"
